# sillyme

./: .stylish-haskell.yaml  README.md  sillyme.cabal
app/: Main.hs
src/: SillyMe.hs
src/SillyMe/: Store.hs
src/SillyMe/Store/: Engine.hs  Model.hs  Repo.hs
src/SillyMe/Store/Engine/: FileSystem.hs  SQLite.hs  SQLite.hs-boot
src/SillyMe/Store/Repo/: FileSystem.hs  SQLite.hs
src/SillyMe/Store/Repo/SQLite/: Generics.hs  TH.hs  X.hs
src/TOSPIO/Database/Garbage/: Model.hs  QueryPack.hs
src/TOSPIO/Database/Garbage/SQLite/: TH.hs
