name:                sillyme
version:             0.1.0.0
synopsis:            Memorize your coding errors. Prove you are an idiot
description:         Please see README.md
homepage:            https://github.com/KenetJervet/sillyme#readme
license:             BSD3
license-file:        LICENSE
author:              Yukio Usuzumi
maintainer:          anohigisavay@gmail.com
copyright:           2017 Yukio Usuzumi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SillyMe
                     , SillyMe.Store
                     , SillyMe.Store.Model
                     , SillyMe.Store.Repo
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , sqlite-simple
                     , uuid
                     , text
  default-language:    Haskell2010

executable sillyme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sillyme
                     -- External dependencies
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite sillyme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sillyme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KenetJervet/sillyme
